prototype #575: fixed a minor style in ListView with marker alignment.

--- a/prototypes/app/styl/components/ListView.styl
+++ b/prototypes/app/styl/components/ListView.styl
@@ -47,7 +47,7 @@ $contentVGap = 6px;
             bottom: 0px;
             left: 0px;
             text-align: center;
-            padding: $contentVGap 0;
+            padding: 0;
 
             /* If a Bootstrap glypicon is used, adjust to the best size */
             .glyphicon {
@@ -204,6 +204,7 @@ $markerWidthLarge = 56px;
     .ListView-item {
         .ListView-item-marker {
             text-align: right;
+            padding: $contentVGap 0;
         }
     }
 }
